--- a/plot_print_results_precision_oncology.ipynb
+++ b/plot_print_results_precision_oncology.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n",
-      "gpu02\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# imports\n",
     "import pandas as pd\n",
@@ -65,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,10 +64,10 @@
     "save_prefix = ''\n",
     "source = 'gdsc'\n",
     "targets = ['ccle','pancreas','xenografts','beat_aml']\n",
-    "target_number_mapping = {'ccle':[10,50,100,500,1000,5000,10000],\n",
-    "                         'pancreas':[10,50,100,500,10000],\n",
-    "                         'beat_aml':[10,50,100,500,1000,5000,10000,20000],\n",
-    "                         'xenografts':[10,50,10000]}\n",
+    "target_number_mapping = {'ccle':[0,10,50,100,500,1000,5000,10000],\n",
+    "                         'pancreas':[0,10,50,100,500,10000],\n",
+    "                         'beat_aml':[0,10,50,100,500,1000,5000,10000,20000],\n",
+    "                         'xenografts':[0,10,50,10000]}\n",
     "\n",
     "flag_normalize_descriptors = True\n",
     "train_mode = 'precision_oncology'\n",
@@ -118,37 +109,7 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cur_load_path: results/gdsc_ccle_10_True_precision_oncology_ensemble.joblib\n",
-      "cur_load_path: results/gdsc_ccle_50_True_precision_oncology_ensemble.joblib\n",
-      "cur_load_path: results/gdsc_ccle_100_True_precision_oncology_ensemble.joblib\n",
-      "cur_load_path: results/gdsc_ccle_500_True_precision_oncology_ensemble.joblib\n",
-      "cur_load_path: results/gdsc_ccle_1000_True_precision_oncology_ensemble.joblib\n",
-      "cur_load_path: results/gdsc_ccle_5000_True_precision_oncology_ensemble.joblib\n",
-      "cur_load_path: results/gdsc_ccle_10000_True_precision_oncology_ensemble.joblib\n",
-      "source: gdsc\n",
-      "target: ccle\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f37aa4ff3d6e466ebdfc580172cd6f85",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=7.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for target in targets:\n",
     "    use_samples_list = target_number_mapping[target]\n",
@@ -178,19 +139,20 @@
     "        for model_key in model_keys:\n",
     "            if model_key not in result_table_dict[cur_key]:\n",
     "                result_table_dict[cur_key][model_key] = dict()\n",
-    "            cur_model_results = cur_num_train_results[model_key]\n",
-    "            min_max_scaler = None\n",
-    "            if 'min_max_scaler' in cur_num_train_results:\n",
-    "                min_max_scaler = cur_num_train_results['min_max_scaler']\n",
-    "            tmp_res_dict = evaluation.get_metric_dict(cur_model_results['pred_complete'], cur_model_results['gt_complete'],\n",
-    "                                        cur_model_results['inhib_data_complete'],cur_model_results['lab_data_complete'],\n",
-    "                                        min_max_scaler, invers_scale_list = invers_scale_list,\n",
-    "                                        flag_calc_per_lab = True,\n",
-    "                                        flag_calc_per_inhib = False)\n",
-    "            \n",
-    "            tmp_res_keys = tmp_res_dict.keys()\n",
-    "            for key in tmp_res_keys:\n",
-    "                result_table_dict[cur_key][model_key][key] = tmp_res_dict[key]\n",
+    "            if model_key in cur_num_train_results:\n",
+    "                cur_model_results = cur_num_train_results[model_key]\n",
+    "                min_max_scaler = None\n",
+    "                if 'min_max_scaler' in cur_num_train_results:\n",
+    "                    min_max_scaler = cur_num_train_results['min_max_scaler']\n",
+    "                tmp_res_dict = evaluation.get_metric_dict(cur_model_results['pred_complete'], cur_model_results['gt_complete'],\n",
+    "                                            cur_model_results['inhib_data_complete'],cur_model_results['lab_data_complete'],\n",
+    "                                            min_max_scaler, invers_scale_list = invers_scale_list,\n",
+    "                                            flag_calc_per_lab = True,\n",
+    "                                            flag_calc_per_inhib = False)\n",
+    "\n",
+    "                tmp_res_keys = tmp_res_dict.keys()\n",
+    "                for key in tmp_res_keys:\n",
+    "                    result_table_dict[cur_key][model_key][key] = tmp_res_dict[key]\n",
     "            \n",
     "    \"\"\"\n",
     "    print('################################################')\n",
@@ -267,21 +229,27 @@
     "                if model not in cur_results:\n",
     "                    continue\n",
     "                model_res = cur_results[model]\n",
-    "                cur_list = model_res[investigate + '_list']\n",
-    "                result_lists.append(cur_list)\n",
-    "                result_means.append(np.mean(cur_list))\n",
-    "                restult_std_errors.append(np.std(cur_list) / np.sqrt(len(cur_list)))\n",
-    "                result_string = str(np.round(np.mean(cur_list),decimals = decs)) +\\\n",
-    "                            ' $\\pm$ ' + str(np.round(np.std(cur_list) / np.sqrt(len(cur_list)),decimals = decs))\n",
-    "                if 'pretrain' in model and model.replace('pretrain','scratch') in model_names:\n",
-    "                    pretrain_list = cur_list\n",
-    "                    scratch_list = cur_results[model.replace('pretrain','scratch')][investigate + '_list']\n",
-    "                    if np.mean(pretrain_list) > np.mean(scratch_list):\n",
-    "                        # perform statistical test to compare pretrain with scratch version\n",
-    "                        stats,pvalue = scipy.stats.ttest_ind(pretrain_list,scratch_list)\n",
+    "                if len(model_res) > 0:\n",
+    "                    cur_list = model_res[investigate + '_list']\n",
+    "                    result_lists.append(cur_list)\n",
+    "                    result_means.append(np.mean(cur_list))\n",
+    "                    restult_std_errors.append(np.std(cur_list) / np.sqrt(len(cur_list)))\n",
+    "                    result_string = str(np.round(np.mean(cur_list),decimals = decs)) +\\\n",
+    "                                ' $\\pm$ ' + str(np.round(np.std(cur_list) / np.sqrt(len(cur_list)),decimals = decs))\n",
+    "                    if 'pretrain' in model and model.replace('pretrain','scratch') in model_names:\n",
+    "                        pretrain_list = cur_list\n",
+    "                        try:\n",
+    "                            scratch_list = cur_results[model.replace('pretrain','scratch')][investigate + '_list']\n",
+    "                            if np.mean(pretrain_list) > np.mean(scratch_list):\n",
+    "                                # perform statistical test to compare pretrain with scratch version\n",
+    "                                stats,pvalue = scipy.stats.ttest_ind(pretrain_list,scratch_list)\n",
     "\n",
-    "                        if pvalue < pval:\n",
-    "                            result_string += '*'\n",
+    "                                if pvalue < pval:\n",
+    "                                    result_string += '*'\n",
+    "                        except:\n",
+    "                            pass\n",
+    "                else:\n",
+    "                    result_string = '--'\n",
     "                result_strings.append(result_string)\n",
     "            value_arg_sort = np.argsort(result_means)[::-1]\n",
     "            # perform statistical test best with second best model\n",
